--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,25 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-resteasy-jsonb</artifactId>
     </dependency>
+
+    <!-- Swagger dependencies -->
+    <dependency>
+        <groupId>io.swagger.core.v3</groupId>
+        <artifactId>swagger-jaxrs2</artifactId>
+        <version>2.0.10</version>
+    </dependency>
+
+    <dependency>
+        <groupId>javax.ws.rs</groupId>
+        <artifactId>javax.ws.rs-api</artifactId>
+        <version>2.1</version>
+    </dependency>
+    <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>3.1.0</version>
+    </dependency>
+
   </dependencies>
   <build>
     <plugins>
@@ -73,6 +92,31 @@
           </systemProperties>
         </configuration>
       </plugin>
+
+
+      <plugin>
+        <groupId>io.swagger.core.v3</groupId>
+        <artifactId>swagger-maven-plugin</artifactId>
+        <version>2.0.10</version>
+        <configuration>
+            <outputFileName>openapi</outputFileName>
+            <outputPath>${project.build.directory}/generatedtest</outputPath>
+            <outputFormat>JSONANDYAML</outputFormat>
+            <resourcePackages>
+                <package>dk.hejselbak.weapon</package>
+            </resourcePackages>
+            <prettyPrint>TRUE</prettyPrint>
+        </configuration>
+        <executions>
+            <execution>
+                <phase>compile</phase>
+                <goals>
+                    <goal>resolve</goal>
+                </goals>
+            </execution>
+        </executions>
+      </plugin>
+
     </plugins>
   </build>
   <profiles>
