--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.parameters>true</maven.compiler.parameters>
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
+    <swagger-core-version>2.0.10/swagger-core-version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -50,7 +51,7 @@
     <dependency>
         <groupId>io.swagger.core.v3</groupId>
         <artifactId>swagger-jaxrs2</artifactId>
-        <version>2.0.10</version>
+        <version>${swagger-core-version}</version>
     </dependency>
 
     <dependency>
@@ -97,7 +98,7 @@
       <plugin>
         <groupId>io.swagger.core.v3</groupId>
         <artifactId>swagger-maven-plugin</artifactId>
-        <version>2.0.10</version>
+        <version>${swagger-core-version}</version>
         <configuration>
             <outputFileName>openapi</outputFileName>
             <outputPath>${project.build.directory}/generatedtest</outputPath>
