--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,6 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.parameters>true</maven.compiler.parameters>
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
-    <swagger-core-version>2.0.10</swagger-core-version>
   </properties>
   <dependencyManagement>
     <dependencies>
@@ -47,26 +46,27 @@
       <artifactId>quarkus-resteasy-jsonb</artifactId>
     </dependency>
     <dependency>
-        <groupId>javax.ws.rs</groupId>
-        <artifactId>javax.ws.rs-api</artifactId>
-        <version>2.1</version>
+      <groupId>javax.ws.rs</groupId>
+      <artifactId>javax.ws.rs-api</artifactId>
+      <version>2.1</version>
     </dependency>
     <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>javax.servlet-api</artifactId>
-        <version>3.1.0</version>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
     </dependency>
-    <!-- Logging dependencies -->
-    <dependency> 
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-simple</artifactId>
       <version>1.7.9</version>
     </dependency>
-    <!-- Swagger dependencies -->
     <dependency>
-        <groupId>io.swagger.core.v3</groupId>
-        <artifactId>swagger-jaxrs2</artifactId>
-        <version>${swagger-core-version}</version>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-openapi</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-smallrye-health</artifactId>
     </dependency>
   </dependencies>
   <build>
@@ -96,31 +96,6 @@
           </systemProperties>
         </configuration>
       </plugin>
-
-
-      <plugin>
-        <groupId>io.swagger.core.v3</groupId>
-        <artifactId>swagger-maven-plugin</artifactId>
-        <version>${swagger-core-version}</version>
-        <configuration>
-            <outputFileName>openapi</outputFileName>
-            <outputPath>${project.build.directory}/generatedtest</outputPath>
-            <outputFormat>JSONANDYAML</outputFormat>
-            <resourcePackages>
-                <package>dk.hejselbak.weapon</package>
-            </resourcePackages>
-            <prettyPrint>TRUE</prettyPrint>
-        </configuration>
-        <executions>
-            <execution>
-                <phase>compile</phase>
-                <goals>
-                    <goal>resolve</goal>
-                </goals>
-            </execution>
-        </executions>
-      </plugin>
-
     </plugins>
   </build>
   <profiles>
