--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ quarkus.log.console.level=DEBUG
 quarkus.log.console.color=false
 
 quarkus.log.category."dk.hejselbak.weapon".level=DEBUG
+
+quarkus.swagger-ui.always-include=true
+quarkus.swagger-ui.path=/swagger-ui
