--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,14 @@ quarkus.log.category."dk.hejselbak.weapon".level=DEBUG
 
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.path=/swagger-ui
+
+# configure your datasource
+# jdbc:h2:tcp://localhost/mem:default
+quarkus.datasource.url=jdbc:h2:mem:default
+quarkus.datasource.driver=org.h2.Driver
+quarkus.datasource.username=username-default
+
+# drop and create the database at startup (use `update` to only update the schema)
+quarkus.hibernate-orm.database.generation=create
+quarkus.hibernate-orm.log.jdbc-warnings=true
+quarkus.hibernate-orm.log.sql=false
