--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.console.level=DEBUG
 quarkus.log.console.color=false
 
-quarkus.log.category."dk.hejselbak.weapon".level=DEBUG
+quarkus.log.category."dk.hejselbak.rolemaster".level=DEBUG
 
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.path=/swagger-ui
