--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,10 @@ quarkus.datasource.username=username-default
 quarkus.hibernate-orm.database.generation=create
 quarkus.hibernate-orm.log.jdbc-warnings=true
 quarkus.hibernate-orm.log.sql=false
+
+# Configuration file
+quarkus.http.port=8080
+quarkus.http.cors=true
+quarkus.http.origins=http://localhost, http://localhost:8080
+quarkus.http.headers=accept, authorization, content-type, x-requested-with
+quarkus.http.methods=GET, OPTIONS
