Changed the DB from H2 to Postgres

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,20 +10,31 @@ quarkus.log.category."dk.hejselbak.rolemaster".level=DEBUG
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.path=/swagger-ui
 
-# configure your datasource
-# jdbc:h2:tcp://localhost/mem:default
-quarkus.datasource.url=jdbc:h2:mem:default
-quarkus.datasource.driver=org.h2.Driver
-quarkus.datasource.username=username-default
+########### configure your datasource
+## H2 data source. Remember to include the H2 driver in the pom, if you are to use this!
+## <dependency>
+##   <groupId>io.quarkus</groupId>
+##   <artifactId>quarkus-jdbc-h2</artifactId>
+## </dependency>
+#quarkus.datasource.url=jdbc:h2:mem:default
+#quarkus.datasource.driver=org.h2.Driver
+#quarkus.datasource.username=username-default
+#quarkus.hibernate-orm.database.generation=create
 
-# drop and create the database at startup (use `update` to only update the schema)
-quarkus.hibernate-orm.database.generation=create
+##### The Postgres settings
+quarkus.datasource.db-kind = postgresql
+quarkus.datasource.username = postgres
+quarkus.datasource.password = postgres
+quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/rolemaster_db
+quarkus.hibernate-orm.database.generation=drop-and-create
+
+## General DB settings
 quarkus.hibernate-orm.log.jdbc-warnings=true
 quarkus.hibernate-orm.log.sql=false
 
 # Configuration file
 quarkus.http.port=9000
 quarkus.http.cors=true
-quarkus.http.origins=http://localhost, http://localhost:9000
-quarkus.http.headers=accept, authorization, content-type, x-requested-with
-quarkus.http.methods=GET, OPTIONS
+# quarkus.http.origins=http://localhost, http://localhost:9000
+# quarkus.http.headers=accept, authorization, content-type, x-requested-with
+# quarkus.http.methods=GET, OPTIONS
