Made it work as separate docker containers

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,8 +25,11 @@ quarkus.swagger-ui.path=/swagger-ui
 quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = postgres
 quarkus.datasource.password = postgres
-quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/rolemaster_db
+quarkus.datasource.jdbc.url = jdbc:postgresql://rolemaster_db:5432/rolemaster_db
+# As this application is meant to start on an empty postgres database, everything is created on startup using the import.sql script
 quarkus.hibernate-orm.database.generation=drop-and-create
+## In dev and test modes, it defaults to import.sql. In production mode, it defaults to no-file.
+quarkus.hibernate-orm.sql-load-script=import.sql
 
 ## General DB settings
 quarkus.hibernate-orm.log.jdbc-warnings=true
