Dockerfile for the postgres database, to be used by the application

--- a/src/main/docker/Dockerfile.postgres
+++ b/src/main/docker/Dockerfile.postgres
@@ -1,6 +1,8 @@
 # docker run --ulimit memlock=-1:-1 -it --rm=true --memory-swappiness=0 \
-#             --name rolemaster_db -e POSTGRES_USER=postgres \
-#             -e POSTGRES_PASSWORD=postgres -e POSTGRES_DB=rolemaster_db \
+#             --name rolemaster_db \
+#             -e POSTGRES_USER=postgres \
+#             -e POSTGRES_PASSWORD=postgres \
+#             -e POSTGRES_DB=rolemaster_db \
 #             -p 5432:5432 postgres
 # docker run --ulimit memlock=-1:-1 -it --rm=true --memory-swappiness=0 --network="nrolemaster" --name rolemaster_db -e POSTGRES_USER=postgres -e POSTGRES_PASSWORD=postgres -e POSTGRES_DB=rolemaster_db -p 5432:5432 postgres
 FROM postgres
