Made a split in profile, allowing for the database connectstring to differ on dev and production.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,31 +1,28 @@
 # Configuration file
 # key = value
+%dev.quarkus.log.level=INFO
+%prod.quarkus.log.level=INFO
+
 quarkus.log.console.enable=true
 quarkus.log.console.format=%d{HH:mm:ss} %-5p [%c{2.}] (%t) %s%e%n
-quarkus.log.console.level=DEBUG
+%dev.quarkus.log.console.level=INFO
+%prod.quarkus.log.console.level=INFO
 quarkus.log.console.color=false
 
-quarkus.log.category."dk.hejselbak.rolemaster".level=DEBUG
+%dev.quarkus.log.category."dk.hejselbak.rolemaster".level=DEBUG
+%dev.quarkus.log.console."dk.hejselbak.rolemaster".level=DEBUG
+%prod.quarkus.log.category."dk.hejselbak.rolemaster".level=INFO
 
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.path=/swagger-ui
 
 ########### configure your datasource
-## H2 data source. Remember to include the H2 driver in the pom, if you are to use this!
-## <dependency>
-##   <groupId>io.quarkus</groupId>
-##   <artifactId>quarkus-jdbc-h2</artifactId>
-## </dependency>
-#quarkus.datasource.url=jdbc:h2:mem:default
-#quarkus.datasource.driver=org.h2.Driver
-#quarkus.datasource.username=username-default
-#quarkus.hibernate-orm.database.generation=create
-
 ##### The Postgres settings
 quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = postgres
 quarkus.datasource.password = postgres
-quarkus.datasource.jdbc.url = jdbc:postgresql://rolemaster_db:5432/rolemaster_db
+%dev.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/rolemaster_db
+%prod.quarkus.datasource.jdbc.url = jdbc:postgresql://rolemaster_db:5432/rolemaster_db
 # As this application is meant to start on an empty postgres database, everything is created on startup using the import.sql script
 quarkus.hibernate-orm.database.generation=drop-and-create
 ## In dev and test modes, it defaults to import.sql. In production mode, it defaults to no-file.
