Updated the application to 1.10.5.Final. And added some metrics to the Resource classes.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,6 +21,7 @@ quarkus.swagger-ui.path=/swagger-ui
 quarkus.datasource.db-kind = postgresql
 quarkus.datasource.username = postgres
 quarkus.datasource.password = postgres
+quarkus.datasource.jdbc.max-size=16
 %dev.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/rolemaster_db
 %prod.quarkus.datasource.jdbc.url = jdbc:postgresql://rolemaster_db:5432/rolemaster_db
 # As this application is meant to start on an empty postgres database, everything is created on startup using the import.sql script
