--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -10,9 +10,11 @@ quarkus.swagger-ui.path=/swagger-ui
 
 # configure your datasource
 # jdbc:h2:tcp://localhost/mem:default
-quarkus.datasource.url=jdbc:h2:mem:default
-quarkus.datasource.driver=org.h2.Driver
+quarkus.datasource.db-kind=h2
+quarkus.datasource.jdbc.url=jdbc:h2:mem:test
+quarkus.datasource.jdbc.driver=org.h2.Driver
 quarkus.datasource.username=username-default
+quarkus.datasource.jdbc.max-size=13
 
 # drop and create the database at startup (use `update` to only update the schema)
 quarkus.hibernate-orm.database.generation=create
