Changed dev to use h2 database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,21 +17,30 @@ quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.path=/swagger-ui
 
 ########### configure your datasource
-##### The Postgres settings
-quarkus.datasource.db-kind = postgresql
-quarkus.datasource.username = postgres
-quarkus.datasource.password = postgres
-quarkus.datasource.jdbc.max-size=16
-%dev.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/rolemaster_db
+##### The Postgres settings PRODUCTION
+%prod.quarkus.datasource.db-kind = postgresql
+%prod.quarkus.datasource.username = postgres
+%prod.quarkus.datasource.password = postgres
+%prod.quarkus.datasource.jdbc.max-size=16
 %prod.quarkus.datasource.jdbc.url = jdbc:postgresql://rolemaster_db:5432/rolemaster_db
 # As this application is meant to start on an empty postgres database, everything is created on startup using the import.sql script
-quarkus.hibernate-orm.database.generation=drop-and-create
+%prod.quarkus.hibernate-orm.database.generation=drop-and-create
 ## In dev and test modes, it defaults to import.sql. In production mode, it defaults to no-file.
 quarkus.hibernate-orm.sql-load-script=import.sql
 
+
+%dev.quarkus.datasource.db-kind=h2
+%dev.quarkus.datasource.jdbc.url=jdbc:h2:mem:test
+## %dev.quarkus.datasource.jdbc.url = jdbc:postgresql://localhost:5432/rolemaster_db
+%dev.quarkus.datasource.jdbc.driver=org.h2.Driver
+%dev.quarkus.datasource.username=username-default
+%dev.quarkus.datasource.jdbc.max-size=13
+%dev.quarkus.hibernate-orm.database.generation=create
+
+
 ## General DB settings
 quarkus.hibernate-orm.log.jdbc-warnings=true
-quarkus.hibernate-orm.log.sql=false
+quarkus.hibernate-orm.log.sql=true
 
 # Configuration file
 quarkus.http.port=9000
