--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,7 +40,7 @@ quarkus.hibernate-orm.sql-load-script=import.sql
 
 ## General DB settings
 quarkus.hibernate-orm.log.jdbc-warnings=true
-quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.log.sql=false
 
 # Configuration file
 quarkus.http.port=9000
